Bug 1484829: Handle arbitrary absolute links for the TZ environment variable. r=Waldo a=pascalc

--HG--
extra : source : 351795558dc5b0c6abae3c5c05bb875db74b6ffa